- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.6, dev
- 
    None
- 
        
- 
        b00798df9 (dev), 18fc3862d (6.6), ec8564963 (tqtc/lts-6.5), 8dd687836 (dev)
Steps to reproduce:
- Run the manual test in qtdeclarative/tests/manual/quickdialogs/dialogs
- Select the MessageDialog tab
- Add some buttons to the MessageDialog
- Open the MessageDialog
- A native macOS message dialog should appear
- Click on one of the buttons inside the dialog
- The dialog should have been closed
- Try to open the dialog again
- relates to
- 
                    QTBUG-118212 [Reg 5.15->6.x][Android] MessageDialog's standard buttons do not accept/reject the dialog -         
- Closed
 
-