src/quickdialogs/quickdialogs/qquickmessagedialog.cpp
@@ -218,8 +218,9 @@ void QQuickMessageDialog::setButtons(QPlatformDialogHelper::StandardButtons butt
 void QQuickMessageDialog::handleClick(QPlatformDialogHelper::StandardButton button,
                                       QPlatformDialogHelper::ButtonRole role)
 {
+    m_roleOfLastButtonPressed = role;
     emit buttonClicked(button, role);
-    close();
+    done(button);
 }
 
 void QQuickMessageDialog::onCreate(QPlatformDialogHelper *dialog)
@@ -239,6 +240,20 @@ void QQuickMessageDialog::onShow(QPlatformDialogHelper *dialog)
     if (QPlatformMessageDialogHelper *messageDialog =
                 qobject_cast<QPlatformMessageDialogHelper *>(dialog))
         messageDialog->setOptions(m_options); // setOptions only assigns a member and isn't virtual
+}
+
+int QQuickMessageDialog::dialogCode() const
+{
+    switch (m_roleOfLastButtonPressed) {
+    case QPlatformDialogHelper::AcceptRole:
+    case QPlatformDialogHelper::YesRole:
+        return Accepted;
+    case QPlatformDialogHelper::RejectRole:
+    case QPlatformDialogHelper::NoRole:
+        return Rejected;
+    default:
+        return QQuickAbstractDialog::dialogCode();
+    }
 }
 
 QT_END_NAMESPACE
