src/quickdialogs/quickdialogs/qquickmessagedialog_p.h
@@ -63,9 +63,11 @@ private Q_SLOTS:
 protected:
     void onCreate(QPlatformDialogHelper *dialog) override;
     void onShow(QPlatformDialogHelper *dialog) override;
+    int dialogCode() const override;
 
 private:
     QSharedPointer<QMessageDialogOptions> m_options;
+    QPlatformDialogHelper::ButtonRole m_roleOfLastButtonPressed = QPlatformDialogHelper::NoRole;
 };
 
 QT_END_NAMESPACE
